--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css">
-        <title>Моё резюме</title>
+        <title>Пример резюме на Github Pages</title>
+        <meta property="og:title" content="Пример резюме на Github Pages" />
+        <meta property="og:description" content="Пример резюме на Github Pages из курса JS Backend на Хекслете" />
+        <meta property="og:image" content="https://cdn2.hexlet.io/attachments/b0587d22beb92bc0bb568dc856a7eed5ffabebb2/store/fill/600/400/a1f4c83d21a775e64b25f8e4d603da89b9497a6a080326faa3129dfa9093/image.png" />
     </head>
     <body>
 
