--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
 
         <div id="header">
-            <h1>АТестирование приложений</h1>
+            <h1>Тестирование приложений</h1>
         </div>
 
         <div id="main">
