--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css">
-        <title>Тестирование приложений</title>
-        <meta property="og:title" content="Тестирование приложений" />
+        <title>Тестирование программного обеспечения</title>
+        <meta property="og:title" content="Тестирование программного обеспечения" />
         <meta property="og:description" content="Методики тестирования приложений" />
         <meta property="og:image" content="https://icon-icons.com/icons2/1448/PNG/512/42509kaaba_99055.png" />
     </head>
     <body>
 
         <div id="header">
-            <h1>Тестирование приложений</h1>
+            <h1>Тестирование программного обеспечения</h1>
         </div>
 
         <div id="main">
